[project]
name = "rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.137.2",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.5",
    "langsmith>=0.8.16",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "slowapi>=0.1.10",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.0",
]
